2013-11-20  Sancho Lerena <slerena@artica.es>

	* build_deb.sh: Fixed script.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/styles/integria_clean.css,
	operation/projects/project_report.php,
	operation/projects/project_detail.php: Fixed some
	bugs related to project view and project report.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: Fixed a problem
	with Top 5 incident graph visualization.

2013-11-18  Dario Rodriguez <dario@artica.es>

	*  operation/incidents/incident_statistics.php,
 	operation/projects/project_report.php: Removed html
	reports from incidents and project views.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/styles/integria_clean.css,
	include/functions_incidents.php,
	operation/reporting/incidents_html.php: Fixed several
	style bugs on pdf reports and improved information
	shown in these reports.

2013-11-18  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control,
	include/config_process.php,
	integria.centos.spec,
	integria.spec,
        integria_dbdata.sql,
        extras/build_rpm.sh,
        extras/build_vars.sh: Updated version and package
	creation scripts.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/styles/integria_clean.css,
	include/functions_incidents.php,
	operation/reporting/incidents_html.php: Fixed several
	bugs related to style of pdf reports.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/functions_graph.php: Fixed a problem with
	incident d3 graph visualization.

2013-11-18  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/operation/incident.php: Fixed an error on the
	file downloads. Now the description and custom type
	collapsibles are open by default.

	* mobile/include/style/main.css: Visual changes. Now many
	items are orange instead of blue.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* godmode/setup/filemgr.php: Fixed a problem
	getting mimetype.
