@@ -2685,6 +2685,10 @@ div.project_involved_people_report_container {
 	margin: 5px;
 }
 
+div.funnel_container {
+	clear: left;
+}
+
 div.project_activity_report_container,
 div.project_info_report_container,
 div.project_involved_people_report_container {
