@@ -1,3 +1,9 @@
+2013-11-20  Dario Rodriguez <dario@artica.es>
+
+	* include/styles/integria.css,
+	operation/campaign/campaign_stats.php: Fixed a style
+	bug related on campaign report.
+
 2013-11-20  Sancho Lerena <slerena@artica.es>
 
 	* build_deb.sh: Fixed script.
